--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.0"
   }
 }
